# tpml-seat-tracker

./: .dockerignore  .env.example  .eslintignore  .gitignore  .prettierignore  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  vite.config.ts  vitest.config.ts
backend/: .dockerignore  Dockerfile  INSTALL_DEPS.md  QUICKSTART.md  README.md  README_SEED.md  STARTUP.md  alembic.ini  docker-compose.yml  init-db.sql  pyproject.toml  pytest.ini  run_tests.sh  test_startup.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_library_info.py  002_create_seat_realtime.py  003_create_seat_history.py  004_create_prediction_results.py  005_create_model_registry.py  006_add_indexes.py
backend/scripts/: seed_data.py
backend/src/: config.py  database.py  main.py
backend/src/api/: dependencies.py  exceptions.py  schemas.py
backend/src/api/routes/: health.py  libraries.py  predict.py  realtime.py
backend/src/db/: __init__.py  connection.py  session.py
backend/src/models/: __init__.py  base.py  library.py  model_registry.py  prediction.py  seat.py
backend/src/services/: distance.py  error_tracking.py  library_service.py  library_sync.py  logger.py  model_storage.py  opening_hours.py  prediction_service.py  prediction_trainer.py  retry.py  scheduler.py  seat_collector.py
backend/tests/: conftest.py
backend/tests/contract/: test_libraries_contract.py  test_libraries_sorting.py  test_predict_contract.py  test_realtime_contract.py
backend/tests/integration/: test_prediction_flow.py  test_scheduler.py
docker/: nginx.conf
(+112 files in other folders)
