[project]
name = "tpml-seat-tracker"
version = "0.1.0"
description = "圖書館座位地圖與預測系統後端 API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "apscheduler>=3.10.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",  # 同步 PostgreSQL driver，供 Alembic 使用
    "greenlet>=3.0.0",  # SQLAlchemy 異步功能所需
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "aiosqlite>=0.19.0",  # SQLite async driver，用於測試
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

